--- a/transaksi.html
+++ b/transaksi.html
@@ -12,13 +12,13 @@
     <div class="container">
 
         <a href="index.html">
-        <img src="back.png" alt="" srcset="" id = "back">
+        <img src="back.png" id = "back">
         </a>
 
         <div class="form">
             <h1>TRANSAKSI</h1>
 
-            <form id="pelangganForm" style="display: block;" action="transaksi.php" method="POST">
+            <form id="pelangganForm" style="display: block;" action="transaksi.html" method="POST">
                 <h5>Tanggal</h5>
                 <input type="date" name="tanggal">
 
@@ -102,7 +102,7 @@
 
             <h1>TERIMAKASIH</h1>
         </div>
-        <a href="laporan.php"><h2>Lihat Laporan</h2></a>
+        <a href="laporan.html"><h2>Lihat Laporan</h2></a>
     </div>
 
 </body>
