--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <div class="feature">
                 <h2>Catat Transaksi</h2>
                 <p>Silahkan Masuk untuk mengisi data transaksi pembeli.</p>
-                <a href="transaksi.php">Masuk</a>
+                <a href="transaksi.html">Masuk</a>
             </div>
             <div class="feature">
                 <h2>Laporan Transaksi</h2>
                 <p>Silahkan Masuk untuk memeriksa data transaksi pembeli.</p>
-                <a href="laporan.php">Masuk</a>
+                <a href="laporan.html">Masuk</a>
             </div>
         </div>
         <div class="testimonials">
