--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="features">
             <div class="feature">
                 <h2>Catat Transaksi</h2>
-                <p>Silahkan Masuk untuk mengisi data transaksi pembeli.</p>
+                <p>Silahkan tekan "Masuk" untuk mengisi data transaksi pembeli.</p>
                 <a href="transaksi.html">Masuk</a>
             </div>
             <div class="feature">
                 <h2>Laporan Transaksi</h2>
-                <p>Silahkan Masuk untuk memeriksa data transaksi pembeli.</p>
+                <p>Silahkan tekan "Masuk" untuk memeriksa data transaksi pembeli.</p>
                 <a href="laporan.html">Masuk</a>
             </div>
         </div>
