--- a/laporan.html
+++ b/laporan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)http://localhost/ResponsiPweb/laporan.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POM Bensin - laporan</title>
     <style>
@@ -27,12 +27,45 @@
 </head>
 <body>
 
-    <a href="http://localhost/ResponsiPweb/index.html">
-        <img src="./laporan_files/back.png" id="back">
+    <a href="index.html">
+        <img src="back.png" id ="back">
     </a>
 
     <h2>Laporan Transaksi Pembelian Bensin</h2>
 
-    <table><tbody><tr><th>Tanggal</th><th>Jenis Bensin</th><th>Harga per liter (Rp)</th><th>Jumlah liter</th><th>Total (Rp)</th></tr><tr><td>12-02-10</td><td>Solar/Diesel (Rp.18.000/liter)</td><td>18.000</td><td>43</td><td>774.000</td></tr><tr><td>24-06-23</td><td>Bensin Premium (Rp.13.000/liter)</td><td>13.000</td><td>12</td><td>156.000</td></tr><tr><td>20-07-31</td><td>Bensin Pertalite (Rp.10.000/liter)</td><td>10.000</td><td>15</td><td>150.000</td></tr><tr><td>23-10-21</td><td>Bensin Premium (Rp.13.000/liter)</td><td>13.000</td><td>12</td><td>156.000</td></tr><tr><td>23-04-12</td><td>Bensin Pertalite (Rp.10.000/liter)</td><td>10.000</td><td>5</td><td>50.000</td></tr></tbody></table>
+    <?php
+        $file = 'data.txt';
+        if (file_exists($file)) {
+            $content = file_get_contents($file);
 
-</body></html>
+            $transactions = explode("\n", $content);
+
+            if (!empty($transactions)) {
+                echo "<table>";
+                    echo "<tr><th>Tanggal</th><th>Jenis Bensin</th><th>Harga per liter (Rp)</th><th>Jumlah liter</th><th>Total (Rp)</th></tr>";
+
+                    foreach ($transactions as $transaction) {
+                        if (!empty($transaction)) {
+                            $data = explode("|", $transaction);
+
+                            echo"<tr>";
+                                echo "<td>" . $data[0] . "</td>"; // Tanggal
+                                echo "<td>" . $data[1] . "</td>"; // Jenis Bensin
+                                echo "<td>" . $data[2] . "</td>"; // Harga per liter
+                                echo "<td>" . $data[3] . "</td>"; // Jumlah liter
+                                echo "<td>" . $data[4] . "</td>"; // Total
+                                echo "</tr>";
+                        }
+                    }
+
+                echo "</table>";
+            } else {
+                echo "<p>Tidak ada transaksi yang tersimpan.</p>";
+            }
+        } else {
+            echo "<p>File tidak ditemukan.</p>";
+        }
+    ?>
+
+</body>
+</html>
