--- a/transaksi_files.html
+++ b/transaksi_files.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POM Bensin - Transaksi</title>
-    <link rel="stylesheet" href="./transaksi_files/sweetalert2.min.css">
-    <link rel="stylesheet" href="./transaksi_files/str.css">
+    <link rel="stylesheet" href="./transaksi_files_files/sweetalert2.min.css">
+    <link rel="stylesheet" href="./transaksi_files_files/str.css">
 </head>
 <body>
     <div class="container">
 
         <a href="http://localhost/ResponsiPweb/index.html">
-        <img src="./transaksi_files/back.png" id="back">
+        <img src="./transaksi_files_files/back.png" id="back">
         </a>
 
         <div class="form">
@@ -39,40 +39,7 @@
                 <button type="submit" value="Hitung Total">Total</button>
 
                 <?php
-                // Proses perhitungan total pembelian
-                    if ($_SERVER["REQUEST_METHOD"] == "POST") {
-                    // Mengambil nilai dari form
-                        $tanggal = $_POST["tanggal"];
-                        $bensin = $_POST["jenis_bensin"];
-                        $harga_per_liter = $_POST["harga"];
-                        $jumlah_liter = $_POST["liter"];
-
-                    // Validasi input (opsional)
-                        if ($bensin == "") {
-                            echo "<p style='color: red;'>Silakan pilih jenis bensin terlebih dahulu.</p>";
-                        } elseif ($harga_per_liter <= 0 || $jumlah_liter <= 0) {
-                            echo "<p style='color: red;'>Mohon masukkan angka yang valid untuk harga dan jumlah liter.</p>";
-                        } else {
-                        // Menghitung total pembelian berdasarkan jenis bensin
-                            switch ($bensin) {
-                                case 'pertalite':
-                                    $output = "Bensin Pertalite (Rp.10.000/liter)|10.000";
-                                    $bensin = "Bensin Pertalite (Rp.10.000/liter)";
-                                    break;
-                                case 'bensin-premium':
-                                    $output = "Bensin Premium (Rp.13.000/liter)|13.000";
-                                    $bensin = "Bensin Premium (Rp.13.000/liter)";
-                                    break;
-                                case 'solar':
-                                    $output = "Solar/Diesel (Rp.18.000/liter)|18.000";
-                                    $bensin = "Solar/Diesel (Rp.18.000/liter)";
-                                    break;
-                            default:
-                                $nama_bensin = "Jenis Bensin Tidak Dikenali";
-                                break;
-                            }
-
-                        // Menghitung total pembelian
+                    // Menghitung total pembelian
                             $total_pembelian = $harga_per_liter * $jumlah_liter;
                             $output = date('y-m-d', strtotime($tanggal)) . "|" . $bensin . "|" . $harga_per_liter . "|" . $jumlah_liter . "|" . number_format($total_pembelian, 3) . "|";
 
@@ -94,10 +61,9 @@
                             } else {
                                 echo "<p style='color: red;'>Gagal menyimpan transaksi ke data.txt.</p>";
                             }
-                        }
-                    }
                 ?>
-                
+
+                <h3>Total Pembelian Bensin:</h3><p>Tanggal : 2424-03-13</p><p>Jenis Bensin: Bensin Pertalite (Rp.10.000/liter)</p><p>Harga per liter: Rp 10.000</p><p>Jumlah liter: 15.000</p><h4>Total: Rp 150.000</h4><p>Data transaksi:</p><pre>24-03-13|Bensin Pertalite (Rp.10.000/liter)|10.000|15|150.000|</pre><p>Transaksi berhasil disimpan ke data.txt.</p>                
             </form><br>
 
             <h1>TERIMAKASIH</h1>
