--- a/laporan.html
+++ b/laporan.html
@@ -33,7 +33,9 @@
 
     <h2>Laporan Transaksi Pembelian Bensin</h2>
 
-    <?php
+    <table><tbody><tr><th>Tanggal</th><th>Jenis Bensin</th><th>Harga per liter (Rp)</th><th>Jumlah liter</th><th>Total (Rp)</th></tr><tr><td>12-02-10</td><td>Solar/Diesel (Rp.18.000/liter)</td><td>18.000</td><td>43</td><td>774.000</td></tr><tr><td>24-06-23</td><td>Bensin Premium (Rp.13.000/liter)</td><td>13.000</td><td>12</td><td>156.000</td></tr><tr><td>20-07-31</td><td>Bensin Pertalite (Rp.10.000/liter)</td><td>10.000</td><td>15</td><td>150.000</td></tr><tr><td>23-10-21</td><td>Bensin Premium (Rp.13.000/liter)</td><td>13.000</td><td>12</td><td>156.000</td></tr><tr><td>23-04-12</td><td>Bensin Pertalite (Rp.10.000/liter)</td><td>10.000</td><td>5</td><td>50.000</td></tr></tbody></table>
+
+    <!-- <?php
         $file = 'data.txt';
         if (file_exists($file)) {
             $content = file_get_contents($file);
@@ -65,7 +67,6 @@
         } else {
             echo "<p>File tidak ditemukan.</p>";
         }
-    ?>
-
+    ?> -->
 </body>
 </html>
